--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ layout: default
     </div>
 <!--<div style="flex-grow: 10">  -->
     <div class="col-md-8 bg-info">
-        <h1 class="mt-3 align-items-center font-weight-bold serif-font">Welcome</h1>
-        <p class="lead mb-3">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve healthcare delivery and patient outcomes.</p>
+        <h1 class="mt-3 align-content-center font-weight-bold serif-font">Welcome</h1>
+        <p class="lead mb-3">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
     </div>
     </div>
