--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
 -->
 
 <!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
-<div class="d-md-flex bg-primary p-5 align-items-center justify-content-center" style="height:500px"> 
+<div class="d-md-flex bg-primary p-5" style="height:500px"> 
 <!--<div class="col-md-1 bg-info"></div> -->
     <div class="col-md-4 bg-warning">
         <div class="cover-author-image">
@@ -51,7 +51,7 @@ layout: default
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
-    <div class="col-md-8 bg-info">
+    <div class="col-md-8 bg-info align-items-center justify-content-center">
         <h1 class="mt-3 font-weight-bold serif-font">Welcome</h1>
         <p class="lead mb-3">Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
