--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ layout: default
 <!--<div class="col-md-1 bg-info"></div> -->
     <div class="col-md-4 bg-warning">
         <div class="cover-author-image">
-            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
+            <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
-    <div class="col-md-8 bg-info align-items-center justify-content-center">
+    <div class="col-md-8 bg-info p-5">
         <h1 class="mt-3 font-weight-bold serif-font">Welcome</h1>
         <p class="lead mb-3">Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
