--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
     </div>
 <!--<div style="flex-grow: 10">  -->
     <div class="col-md-8 bg-info">
-        <div class="d-md-flex align-items-center justify-content-center h-100">
+        <div class="d-md-flex align-items-center h-100">
             <h1 class="mt-3 font-weight-bold serif-font">Welcome</h1>
             <p class="lead mb-3">Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
