--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
 <!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
 <div class="d-md-flex align-items-center bg-primary p-5" style="height:500px"> 
 <!--<div class="col-md-1 bg-info"></div> -->
-    <div class="col-md-4 bg-warning">
+    <div class="col-md-4 align-self-stretch bg-warning">
         <div class="cover-author-image">
             <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
