--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ layout: default
 -->
 
 <!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
-<div class="d-md-flex bg-primary p-5" style="height:500px"> 
+<div class="d-md-flex align-items-center bg-primary p-5" style="height:500px"> 
     <div class="col-md-4 align-self-stretch bg-warning">
-        <div class="cover-author-image align-items-center ">
+        <div class="cover-author-image">
             <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
     </div>
