--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
 -->
 
 <!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
-<div class="d-md-flex align-items-center p-5" style="height:500px"> 
+<div class="d-md-flex justify-content-center p-5" style="height:500px"> 
     <div class="col-md-4 align-self-stretch justify-content-center bg-warning">
         <div class="cover-author-image">
             <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
