--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
 
 <!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
 <div class="d-md-flex bg-primary p-5 justify-content-center" style="height:500px"> 
-    <div class="md-4 align-self-stretch bg-warning">
+    <div class="col-md-4 align-self-stretch bg-warning">
         <div class="cover-author-image">
             <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
