--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@ layout: default
 <div class="flex-container">
 -->
 
-<!--https://www.w3schools.com/bootstrap4/bootstrap_flex.asp-->
-<!--https://stackoverflow.com/questions/19026884/flexbox-center-horizontally-and-vertically-->
-<!-- <div class="d-md-flex p-5 justify-content-center bg-primary" style="height:500px"> -->
-<div class="col-md-4 align-self-stretch bg-warning">
-    <div class="col-md-4 align-self-stretch">        
-    <div class="cover-author-image">
+<!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
+<div class="d-md-flex bg-primary p-5 justify-content-center" style="height:500px"> 
+    <div class="col-md-4 align-self-stretch bg-warning">
+        <div class="cover-author-image">
             <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
-    <div class="col-md-8 align-self-stretch"></div>
+    <div class="col-md-8 align-self-stretch bg-info">
         <h1 class="mt-3 font-weight-bold serif-font">Welcome</h1>
         <p class="lead mb-3">Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">About me</a>
