--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 
 <body>
 
-<di id="container"><!-- flex container -->
+<div id="container"><!-- flex container -->
 
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
