--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 ================================================== -->
 <style>
 
-.container_test {
+#container_test {
     display: flex; /* establish flex container */
     flex-direction: column; /* make main-axis vertical */
     justify-content: center; /* align items vertically, in this case */
