--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 ================================================== -->
 <style>
 
-#container_test {
+.container_test {
     display: flex; /* establish flex container */
     flex-direction: column; /* make main-axis vertical */
     justify-content: center; /* align items vertically, in this case */
@@ -30,12 +30,15 @@ layout: default
 
 <body>
 
-<div class="box" id="bluebox"><!-- flex item -->
-    <p>DIV #1</p>
-</div>
+<div class="container_test"><!-- flex container -->
+    <div class="box" id="bluebox"><!-- flex item -->
+        <p>DIV #1</p>
+    </div>
 
-<div class="box" id="redbox"><!-- flex item -->
-    <p>DIV #2</p>
+    <div class="box" id="redbox"><!-- flex item -->
+        <p>DIV #2</p>
+    </div>
+
 </div>
 
 </body>
