--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 
 <body>
 
-<div class="container_test"><!-- flex container -->
+<div class="container_tes"><!-- flex container -->
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
