--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Home
-
+layout: default
 ---
 
 <!-- Home Intro
@@ -21,6 +21,7 @@ title: Home
     width: 300px;
     margin: 5px;
     text-align: center;
+    padding-top: 5;
 }
 
 #bluebox { background: aqua; }
