--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@ layout: default
     width: 300px;
     margin: 5px;
     text-align: center;
-    justify-content: center; /* align items vertically, in this case */
-    align-items: center; /* align items horizontally, in this case */
 }
 
 #bluebox { background: aqua; }
@@ -32,13 +30,13 @@ layout: default
 
 <body>
 
+<div class="container_test">
+    <div class="box" id="bluebox"><!-- flex item -->
+        <p>DIV #1</p>
+    </div>
 
-<div class="box" id="bluebox"><!-- flex item -->
-    <p>DIV #1</p>
+    <div class="box" id="redbox"><!-- flex item -->
+        <p>DIV #2</p>
+    </div>
 </div>
-
-<div class="box" id="redbox"><!-- flex item -->
-    <p>DIV #2</p>
-</div>
-
 </body>
