--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 </style>
 
 <!-- <body> -->
-
+<div class="container bg-info">
 <div class="container_test">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
@@ -38,5 +38,6 @@ layout: default
     <div class="box" id="redbox"><!-- flex item -->
         <p>DIV #2</p>
     </div>
+</div>
 </div>
 <!-- </body>    -->
