--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 }
 
 .box {
-    align-items: center;
+/*    align-items: center; */
     width: 300px;
     margin: 5px;
     text-align: center;
