--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 }
 
 .box {
-    justify-content: center;
+    align-items: center; /* align items horizontally, in this case */
     width: 300px;
     margin: 5px;
     text-align: center;
