--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ layout: default
 <!-- <body> -->
 <div class="container bg-info">
 <!-- <div class="container_test"> -->
+    <div class="justify-content-center">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
@@ -38,6 +39,7 @@ layout: default
     <div class="box" id="redbox"><!-- flex item -->
         <p>DIV #2</p>
     </div>
+</div>
 <!-- </div> -->
 </div>
 <!-- </body>    -->
