--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 <!-- <body> -->
 <div class="container bg-info">
 <!-- <div class="container_test"> -->
-    <div class="justify-content-center align-items-center">
+    <div clas="justify-content-center align-items-center">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
