--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 </style>
 
 <!-- <body> -->
-<div class="container bg-info justify-content-center align-items-center">
+<div class="container bg-warning justify-content-center align-items-center">
 <!-- <div class="container_test"> -->
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
