--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@ layout: default
 </style>
 
 <!-- <body> -->
-<div class="container bg-warning flex">
-<!-- <div class="container_test"> -->
-    <div class="box justify-content-center align-items-center" id="bluebox"><!-- flex item -->
+<div class="container bg-warning">
+<div class="container_test bg-info">
+    <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
 
     <div class="box" id="redbox"><!-- flex item -->
         <p>DIV #2</p>
     </div>
-<!-- </div> -->
+</div>
 </div>
 <!-- </body>    -->
