--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 </style>
 
 <!-- <body> -->
-<div class="container bg-warning">
+<!-- <div class="container bg-warning"> -->
 <div class="container_test bg-info">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
@@ -39,5 +39,5 @@ layout: default
         <p>DIV #2</p>
     </div>
 </div>
-</div>
+<!-- </div> -->
 <!-- </body>    -->
