--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 <style>
 
 .container_test {
-    /* display: flex; /* establish flex container */
+    display: flex; /* establish flex container */
     flex-direction: column; /* make main-axis vertical */
     justify-content: center; /* align items vertically, in this case */
     align-items: center; /* align items horizontally, in this case */
@@ -18,7 +18,6 @@ layout: default
 }
 
 .box {
-    display: flex; 
     width: 300px;
     margin: 5px;
     text-align: center;
