--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ layout: default
 .box {
     width: 300px;
     margin: 5px;
-    /* text-align: center; */
-    /* padding-top: 50px */
+    text-align: center;
+    padding-top: 25px
 }
 
 #bluebox { background: aqua; }
