--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 .container_test {
     display: flex; /* establish flex container */
-    flex-direction: column; /* make main-axis vertical */
+/*    flex-direction: column; /* make main-axis vertical */
     justify-content: center; /* align items vertically, in this case */
     align-items: center; /* align items horizontally, in this case */
     height: 300px; /* for demo purposes */
