--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@ layout: default
 }
 
 .box {
-    display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-  border: 3px solid green;
+    width: 300px;
+    margin: 5px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 #bluebox { background: aqua; }
@@ -32,8 +31,8 @@ layout: default
 
 
 <!-- <body> -->
-<div class="container bg-info">
-<!-- <div class="container_test bg-info">   -->
+<!-- <div class="container bg-info">    -->
+<div class="container_test bg-info">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
