--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 
 <!-- <body> -->
 <!-- <div class="container bg-info">    -->
-<div class="container_test bg-info">
+<div class="container bg-info">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
