--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ layout: default
     margin: 5px;
     text-align: center;
     vertical-align: middle;
-    justify-content: center; /* align items vertically, in this case */
 }
 
 #bluebox { background: aqua; }
@@ -32,13 +31,8 @@ layout: default
 
 
 <!-- <body> -->
-<div class="box" id="bluebox"><!-- flex item -->
-        <p>DIV #1</p>
-    </div>
-
-    <div class="box" id="redbox"><!-- flex item -->
-        <p>DIV #2</p>
-    </div>
-
+<div class="flex bg-warning">
+    <p>hello</p>
+</div>
 <!-- </div> -->
 <!-- </body>    -->
